--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
 
     <main>
         <nav>
-            <a href="./home.html">HOME</a>
+            <a href="./index.html">HOME</a>
             <a class="selected">PROJETOS</a>
             <a href="./courses.html">CURSOS</a>
         </nav>
