--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
 
     <main>
         <nav>
-            <a href="./home.html">HOME</a>
+            <a href="./index.html">HOME</a>
             <a href="./projects.html">PROJETOS</a>
             <a class="selected">CURSOS</a>
         </nav>
