--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div>
                     <h1>SOBRE MIM</h1>
             
-                    <p>Olá, tudo bem? Meu nome é Eduardo, sou Desenvolvedor Full Stack PHP. Gosto muito de aprender e trabalhar com criação e desenvolvimento de sites e sistemas.&NewLine;&NewLine; Aos 11 ou 12 anos gostava de mexer com Visual Basic do Excel, mas nunca pensei em trabalhar na programação, até que a mais de um ano atrás comecei um curso de Desenvolvimento de Sistemas e foi ai que descobrir como é grande, fascinante e desafiador o mundo da programação, e é com isso que quero passar a minha vida trabalhando, sempre aprendendo, reaprendendo, encarando novos desafios e me renovando.</p>
+                    <p>Olá, tudo bem? Meu nome é Eduardo, sou Desenvolvedor Full Stack PHP. Gosto muito de aprender e trabalhar com criação e desenvolvimento de sites e sistemas.&NewLine;&NewLine; Entre 11 e 12 anos gostava de mexer com Visual Basic do Excel, mas nunca pensei em trabalhar na programação, até que a mais de um ano atrás comecei um curso de Desenvolvimento de Sistemas e foi ai que descobrir como é grande, fascinante e desafiador o mundo da programação, e é com isso que quero passar a minha vida trabalhando, sempre aprendendo, reaprendendo, encarando novos desafios e me renovando.</p>
                 </div>
             
                 <div>
