--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div>
                     <h1>OBJETIVOS</h1>
             
-                    <p>Atuar como Desenvolvedor Full Stack/Back-End PHP. Cursar Engenharia da Computação em 2021 e a procura de emprego para que possa ajudar nas mensalidades.</p>
+                    <p>Atuar como Desenvolvedor Full Stack/Back-End PHP. Cursar Engenharia da Computação em 2021.</p>
                 </div>
             
                 <div class="skils">
